--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Concorde-EFB/concorde.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CONCORDE EFB v0.85</title>
+    <title>CONCORDE EFB v0.85-beta</title>
   </head>
 <script>
   window.addEventListener('load', function () {
