cleanup beta versioning and update version numbering to v1.1 (v1.1.0)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Concorde-EFB/concorde.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CONCORDE EFB v0.85-beta</title>
+    <title>CONCORDE EFB v1.1</title>
   </head>
 <script>
   window.addEventListener('load', function () {
